--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "bootstrap": "^5.1.3",
     "normalize.css": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
+    "stylelint": "^14.0.1",
+    "stylelint-order": "^5.0.0",
+    "stylelint-webpack-plugin": "^3.1.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
