--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "stylelint": "^14.0.1",
     "stylelint-order": "^5.0.0",
     "stylelint-webpack-plugin": "^3.1.0",
+    "vanilla-lazyload": "^17.5.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
