--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.16.0",
     "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
+    "inputmask": "^5.0.6",
     "normalize.css": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "stylelint": "^14.0.1",
