--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inputmask": "^5.0.6",
     "normalize.css": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
+    "simple-lightbox": "^2.1.0",
     "stylelint": "^14.0.1",
     "stylelint-order": "^5.0.0",
     "stylelint-webpack-plugin": "^3.1.0",
